tests/rosetta/out/Elixir/a+b.exs
# Generated by Mochi compiler v0.10.26 on 2025-07-16T12:49:19Z
defmodule Main do
  @spec main() :: nil
  def main() do
    try do
      a = int.(_input())
      b = int.(_input())
      IO.inspect(a + b)
    catch
      {:return, v} -> v
    end
  end

  def main do
    main()
  end

  defp _input() do
    String.trim(IO.gets(""))
  end
end

Main.main()
